[package]
name = "rust-heaps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[dev-dependencies]
criterion = { version = "0.5.1" }

[[bench]]
name = "maxheap_push"
harness = false

[[bench]]
name = "maxheap_pop"
harness = false
